--- a/index.html
+++ b/index.html
@@ -2,14 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <script src="./js/ListController.js"></script>
+    <script type="text/javascript" src="./js/ListController.js"></script>
     <link rel="stylesheet" href="./css/index.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet">
     <title>To Do</title>
   </head>
 
   <body>
-    <div id="new-page" ondblclick="AddPage(event) "></div>
-
+    <div id="new-page" onclick="AddPage(event)">
+      <span>Добавить</span>
+    </div>
   </body>
 </html>
